# client-python-async

./: README.md  client.py  model.py  pyproject.toml  requirements.txt  utility.py
.github/workflows/: code-security.yml  dependency-review.yml  python-app.yml  python-test.yml
data/: product.csv  product.db  tradeable_entity.csv
tests/: test_client.py  test_models.py  test_utility.py
