[tool.poetry]
name = "client-python-async"
version = "0.1.0"
description = "python client for power.trade crypto exchange providing async(ws) market data"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dataclasses-json = "^0.6.7"
websockets = "^13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning"
]
